fix bugs involving overlapping or incorrectly sized elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Header */
 
 header {
-    padding-bottom: 90px;
+    padding-bottom: 75px;
     font-family: "Bungee";
 }
 
@@ -12,7 +12,7 @@ header {
 }
 
 .logo {
-    height: 75px;
+    height: 70px;
 }
 
 
@@ -69,8 +69,8 @@ footer{
 }
 
 .social-contact {
-    background-color: rgb(197, 151, 0);
-    padding-bottom: 25px;
+    background-color: rgb(214, 164, 0);
+    padding-bottom: 0.5em;
     text-align: center;    
 }
 
@@ -91,22 +91,6 @@ footer{
     transition-duration: 0.4s;
 }
 
-#contact-button {
-    border-radius: 12px;
-    background-color: rgb(197, 151, 0);
-    border-color: #c6c6c6;
-    transition-duration: 0.4s;
-    font-size: 15px;
-    margin-bottom: 20px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
-
-#contact-button:hover {
-    border-radius: 10px;
-    color: #ffffff;
-    background-color:#c6c6c6 ;
-}
-
 /* Contact Form */
 
 .mcf-surround {
@@ -120,9 +104,10 @@ footer{
     max-width: 90%;
     min-width: 60%;
     font-family: "Prosto One";
-    background: #c6c6c6;
+    background: #dadada;
     border-radius: 0.25rem;
     padding: 0px;
+    padding-top: 5px;
     text-align: center;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
@@ -166,8 +151,9 @@ footer{
     font-family: "Prosto One";
     text-align: center;
     padding-top: 10px;
-    background: #c6c6c6;
+    background: #dadada;
     border-radius: 0.25rem;
+    padding-bottom: 0.5em;
     max-width: 90%;
     min-width: 60%;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
@@ -337,6 +323,7 @@ footer{
   #result {
     text-align: center;
     background: rgb(198, 198, 198);
+    border-radius: 15%;
   }
   #result h2 {
     font-size: 2.5em;
@@ -351,11 +338,16 @@ footer{
 #htp-surround {
     width: 90%;
     margin: auto;
-    border: 1px #ffc125;
-    background: #ffffff;
-    border-radius: 20%;
-    box-shadow: 2px;
+}
 
+.htp-titles {
+    border: none;
+    box-shadow: 0 0.6em 2em rgba(0, 0, 0, 0.2);
+    text-align: center;
+    padding-bottom: 10px;
+    background: #dadada;
+    border: 1px #ffc125;
+    border-radius: 5px;
 }
 
 #htp-img {
@@ -366,5 +358,25 @@ footer{
 }
 
 .htp-content {
-    text-align: center;
+    border: none;
+    margin-top: 10px;
+    background: #dadada;
+    box-shadow: 0 0.6em 2em rgba(0, 0, 0, 0.2);
+    border: 1px #ffc125;
+    border-radius: 5px;
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+
+.bk-game {
+    display: flex;
+    justify-content: center;
+    border-radius: .25rem;
+    background-color: #ffc125;
+    padding: 0.375rem 0.75rem;
+    margin-bottom: 1em;
+    width: 50%;
+    box-shadow: 0 5px 5px rgba(152, 126, 39, 0.4);
+    margin: auto;
+    color: #333;
 }
